--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,24 @@
+attrs==19.3.0
 certifi==2019.11.28
 chardet==3.0.4
 Click==7.0
 Flask==1.1.1
 idna==2.8
+importlib-metadata==1.3.0
 itsdangerous==1.1.0
 Jinja2==2.10.3
 MarkupSafe==1.1.1
+more-itertools==8.0.2
+packaging==19.2
 pkg-resources==0.0.0
+pluggy==0.13.1
+py==1.8.1
 pycscart==0.2.2
+pyparsing==2.4.6
+pytest==5.3.2
 requests==2.22.0
+six==1.13.0
 urllib3==1.25.7
+wcwidth==0.1.8
 Werkzeug==0.16.0
+zipp==0.6.0
