--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,16 @@
+alembic==1.3.2
 attrs==19.3.0
 certifi==2019.11.28
 chardet==3.0.4
 Click==7.0
 Flask==1.1.1
+Flask-Migrate==2.5.2
+Flask-SQLAlchemy==2.4.1
 idna==2.8
 importlib-metadata==1.3.0
 itsdangerous==1.1.0
 Jinja2==2.10.3
+Mako==1.1.0
 MarkupSafe==1.1.1
 more-itertools==8.0.2
 packaging==19.2
@@ -16,8 +20,11 @@ py==1.8.1
 pycscart==0.2.2
 pyparsing==2.4.6
 pytest==5.3.2
+python-dateutil==2.8.1
+python-editor==1.0.4
 requests==2.22.0
 six==1.13.0
+SQLAlchemy==1.3.12
 urllib3==1.25.7
 wcwidth==0.1.8
 Werkzeug==0.16.0
