--- a/.travis.yml
+++ b/.travis.yml
@@ -5,6 +5,6 @@ python:
     - "3.6"
 install:
     - pip install -r requirements.txt
-    - pip install -e .
+    - pip install -e Gondwana
 script:
     - pytest
