add dir cofigration

--- a/config/config-production.cfg
+++ b/config/config-production.cfg
@@ -1,3 +1,10 @@
+# config-production.cfg
+
+import os
+
+BASEDIR = os.path.abspath(os.path.dirname(__file__))
+TOP_LEVEL_DIR = os.path.abspath(os.curdir)
+
 SECRET_KEY = 'fMHTYwNUABVwlf1ySV87n7Um5cEzL6Ir'
 SQLALCHEMY_TRACK_MODIFICATIONS = True
 SQLALCHEMY_DATABASE_URI = 'sqlite:///Gondwana-production.sqlite'
