--- a/config/config-development.cfg
+++ b/config/config-development.cfg
@@ -1,3 +1,10 @@
+# config-development.cfg
+
+import os
+
+BASEDIR = os.path.abspath(os.path.dirname(__file__))
+TOP_LEVEL_DIR = os.path.abspath(os.curdir)
+
 DEBUG = True
 SECRET_KEY = 'fMHTYwNUABVwlf1ySV87n7Um5cEzL6Ir'
 SQLALCHEMY_TRACK_MODIFICATIONS = True
