move BASEDIR to config file

--- a/config/config-production.cfg
+++ b/config/config-production.cfg
@@ -2,5 +2,7 @@
 
 import os
 
+BASEDIR = os.path.abspath(os.path.dirname(__file__))
+
 SECRET_KEY = 'fMHTYwNUABVwlf1ySV87n7Um5cEzL6Ir'
 SQLALCHEMY_TRACK_MODIFICATIONS = True
