--- a/requirements.txt
+++ b/requirements.txt
@@ -14,7 +14,10 @@ Jinja2==2.10.3
 Mako==1.1.0
 MarkupSafe==1.1.1
 more-itertools==8.0.2
+mysql-connector==2.2.9
+mysqlclient==1.4.6
 packaging==19.2
+pkg-resources==0.0.0
 pluggy==0.13.1
 py==1.8.1
 pycscart==0.2.2
