add database configuration

--- a/config/config-production.cfg
+++ b/config/config-production.cfg
@@ -5,4 +5,5 @@ import os
 BASEDIR = os.path.abspath(os.path.dirname(__file__))
 
 SECRET_KEY = 'fMHTYwNUABVwlf1ySV87n7Um5cEzL6Ir'
+SQLALCHEMY_DATABASE_URI = 'mysql+mysqlconnector://username:password@server:port/db'
 SQLALCHEMY_TRACK_MODIFICATIONS = True
