--- a/config/config-development.cfg
+++ b/config/config-development.cfg
@@ -6,4 +6,5 @@ BASEDIR = os.path.abspath(os.path.dirname(__file__))
 
 DEBUG = True
 SECRET_KEY = 'fMHTYwNUABVwlf1ySV87n7Um5cEzL6Ir'
+SQLALCHEMY_DATABASE_URI = 'mysql+mysqlconnector://username:password@server:port/db'
 SQLALCHEMY_TRACK_MODIFICATIONS = True
