--- a/requirements.txt
+++ b/requirements.txt
@@ -20,7 +20,7 @@ packaging==19.2
 pkg-resources==0.0.0
 pluggy==0.13.1
 py==1.8.1
-pycscart==0.2.2
+pycscart>=0.2.2
 pyparsing==2.4.6
 pytest==5.3.2
 python-dateutil==2.8.1
