add order download filename

--- a/config/config-development.cfg
+++ b/config/config-development.cfg
@@ -8,3 +8,5 @@ DEBUG = True
 SECRET_KEY = 'fMHTYwNUABVwlf1ySV87n7Um5cEzL6Ir'
 SQLALCHEMY_DATABASE_URI = 'mysql+mysqlconnector://username:password@server:port/db?charset=utf8'
 SQLALCHEMY_TRACK_MODIFICATIONS = True
+
+ORDER_DOWNLOAD_FILENAME = 'order_download.xlsx'
