--- a/config/config-development.cfg
+++ b/config/config-development.cfg
@@ -10,3 +10,5 @@ SQLALCHEMY_DATABASE_URI = 'mysql+mysqlconnector://username:password@server:port/
 SQLALCHEMY_TRACK_MODIFICATIONS = True
 
 ORDER_DOWNLOAD_FILENAME = 'order_download.xlsx'
+
+UPLOAD_DIR = os.path.join(BASEDIR, 'upload')
