--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ attrs==19.3.0
 certifi==2019.11.28
 chardet==3.0.4
 Click==7.0
+et-xmlfile==1.0.1
 Flask==1.1.1
 Flask-Migrate==2.5.2
 Flask-Script==2.0.6
@@ -10,16 +11,18 @@ Flask-SQLAlchemy==2.4.1
 idna==2.8
 importlib-metadata==1.3.0
 itsdangerous==1.1.0
+jdcal==1.4.1
 Jinja2==2.10.3
 Mako==1.1.0
 MarkupSafe==1.1.1
 more-itertools==8.0.2
 mysql-connector==2.2.9
 mysqlclient==1.4.6
+openpyxl==3.0.4
 packaging==19.2
 pluggy==0.13.1
 py==1.8.1
-pycscart>=0.4.2
+pycscart==0.4.2
 pyparsing==2.4.6
 pytest==5.3.2
 python-dateutil==2.8.1
