add upload config

--- a/config/config-development.cfg
+++ b/config/config-development.cfg
@@ -11,4 +11,5 @@ SQLALCHEMY_TRACK_MODIFICATIONS = True
 
 ORDER_DOWNLOAD_FILENAME = 'order_download.xlsx'
 
-UPLOAD_DIR = os.path.join(BASEDIR, 'upload')
+UPLOAD_FOLDER = os.path.join(BASEDIR, 'upload')
+ALLOWED_EXTENSIONS = {'xlsx'}
