--- a/config/config-production.cfg
+++ b/config/config-production.cfg
@@ -10,4 +10,5 @@ SQLALCHEMY_TRACK_MODIFICATIONS = True
 
 ORDER_DOWNLOAD_FILENAME = 'order_download.xlsx'
 
-UPLOAD_DIR = os.path.join(BASEDIR, 'upload')
+UPLOAD_FOLDER = os.path.join(BASEDIR, 'upload')
+ALLOWED_EXTENSIONS = {'xlsx'}
