Add SMTP settings

--- a/config/config-production.cfg
+++ b/config/config-production.cfg
@@ -12,3 +12,8 @@ ORDER_DOWNLOAD_FILENAME = 'order_download.xlsx'
 
 UPLOAD_FOLDER = os.path.join(BASEDIR, 'upload')
 ALLOWED_EXTENSIONS = {'xlsx'}
+
+SMTP_SERVER = 'smtp.qq.com'
+SMTP_PORT = 587
+SMTP_EMAIL = TEST@qq.com
+SMTP_PASSWORD = password
