--- a/config/config-production.cfg
+++ b/config/config-production.cfg
@@ -15,5 +15,5 @@ ALLOWED_EXTENSIONS = {'xlsx'}
 
 SMTP_SERVER = 'smtp.qq.com'
 SMTP_PORT = 587
-SMTP_EMAIL = TEST@qq.com
-SMTP_PASSWORD = password
+SMTP_EMAIL = 'TEST@qq.com'
+SMTP_PASSWORD = 'password'
